--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://proprietary.dev
+APP_URL=http://naogaon.city
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=proprietary_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=admin_prop_db
+DB_USERNAME=admin_prop_u
+DB_PASSWORD=prop_pass_xxx
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
